<resources>
    <string name="app_name">CliMate</string>
    <string name="title_activity_maps">Map</string>
    <string name="upload" translatable="false">Upload</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="upload_an_event" translatable="false">Upload an event</string>
    <string name="current_location" translatable="false">Getting current location...</string>
    <string name="date" translatable="false">Date</string>
    <string name="time" translatable="false">time</string>
    <string name="description" translatable="false">Describe this event...</string>
    <string name="upload_img" translatable="false">Upload an image</string>
    <string name="upload_img_text" translatable="false">Please upload an image as evidence (optional)</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="cancel" translatable="false">Cancel</string>
<!--map and upload-->


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
<!--login-->



    <string name="change_profile">"Change Profile"</string>
    <string name="username">"Username"</string>
    <string name="country">"Country"</string>
    <string name="state">"State"</string>
    <string name="city">"City"</string>
    <string name="email">"Email"</string>
    <string name="phone_num">"Phone Number"</string>
    <string name="save_profile">"Save Profile"</string>
<!--change profile-->
    <string name="profile">"Profile"</string>
    <string name="more">"......"</string>
<!--profile-->

    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
<!--menu-->

    <string name="settings">Settings</string>
    <string name="num_events">Numer of events show on the map:</string>
    <string name="set1">Max:65535</string>
    <string name="area">Alarm area:</string>
    <string name="set2">Max:10000 miles</string>
    <string name="alarm_mode">Alarm mode:</string>
    <string name="min_dangerlevel">Minimum danger level:</string>
    <string name="save">Save</string>
<!--settings -->

</resources>
